# Cohezy

./: .env  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/app/: db.py  main.py
backend/src/: main.py
backend/src/api/: __init__.py  auth.py  deps.py  router.py  sessions.py  users.py
backend/src/config/: database.py  redis_client.py  settings.py
backend/src/core/: config.py  logger.py
backend/src/db/: init_db.py  redis.py  session.py
backend/src/models/: __init__.py  base.py  resource.py  session.py  session_member.py  token.py  user.py
backend/src/schemas/: __base__.py  auth.py  common.py  session.py  user.py
backend/src/services/: auth_service.py  redis_service.py  session_member_service.py  session_service.py  user_service.py
backend/src/utils/: enums.py  hashing.py  redis_util.py
frontend/: Dockerfile  index.html
frontend/scripts/: main.js
frontend/styles/: style.css
nginx/: nginx.conf
